dropshot/tests/fail/bad_endpoint8.stderr
error: Endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody,]
               [body_param: StreamingBody,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, HttpError>
  --> tests/fail/bad_endpoint8.rs:19:1
   |
19 | / fn bad_endpoint(
20 | |     _rqctx: RequestContext<()>,
21 | | ) -> Result<HttpResponseOk<Ret>, HttpError> {
   | |___________________________________________^

error: endpoint handler functions must be async
  --> tests/fail/bad_endpoint8.rs:19:1
   |
19 | fn bad_endpoint(
   | ^^
